# everarch

./: .gitignore  CMakeLists.txt  Makefile.am  README  backlog  configure.ac  py-compile  release  test.conf.in  test.sh
claim-stats/: claim-stats.css  claim-stats.html  claim-stats.js  package-lock.json  package.json
cmake/: FindPICOQUIC.cmake
doc/: BUILD.alpine  BUILD.termux  attr-factory.org  bucket file format.org  coding-style.org
doc/attr-ui/: contact-ui.xml
doc/claims/: attr-defs.xml  attr-demo.xml  attr-file.xml  attr-mapping-file.xml  attr-rule-file.xml  attr-spec.xml  claim-attributes.xml  claim-set-file.xml  file-to-attr.xslt  file.xml  mapping-file-attr.xml
doc/evr-attr-index/: attr-merge-operations.org
emacs/: .gitignore  Makefile.am  emacs-tests.sh  evr.el  templar-test.el  templar.el
embeddings/: .gitignore  emb-query  embbd  embeddings.py  embqd  requirements.txt  split-text
embeddings/evr_embeddings/: __init__.py  chroma.py  ollama.py  splitter.py
etc/: Makefile.am
etc/configuration/: full.json
etc/podman/: Makefile.am  README  evr-podman.conf
etc/podman/clang/: Containerfile  build
etc/podman/entrypoints/: prepare_auth_token  prepare_gpg_key  prepare_tls_cert  wait_for_file
etc/podman/evr-alpine/: Containerfile  build  publish
etc/podman/evr-attr-index/: Containerfile  Makefile.am  cert.conf  entrypoint.sh
etc/podman/evr-attr-index/attr-spec/: Makefile  attr-trans.xslt  file-meta-factory  install_attr_spec
etc/podman/evr-attr-index/attr-spec/tests/: .gitignore  file-wo-title.expected.xml  file-wo-title.in.xml  file.expected.xml  file.in.xml  unknown-with-title.expected.xml  unknown-with-title.in.xml  unknown.expected.xml  unknown.in.xml
etc/podman/evr-glacier-storage/: Containerfile  README  build  entrypoint.sh  publish  start.sh
etc/podman/evr-home-edition/: docker-compose.yml
etc/podman/evr-join-link/: Containerfile  build  entrypoint.sh  publish
etc/podman/evr-upload-httpd/: Containerfile  Makefile.am  build  entrypoint.sh  publish
etc/podman/evr-web/: Containerfile  build  entrypoint.sh  envsubst-var-fix.sh  nginx.conf
etc/podman/evr-websocket-server/: .gitignore  Containerfile  build  entrypoint.js  evr  publish  start.js
etc/podman/standalone-glacier-websocket/: README  docker-compose.yml
etc/poke-pickles/: Makefile.am  evr-glacier-bucket.pk
etc/profile-aggregate/: profile-aggregate.py
etc/sqlite-profile/: duration-plot.py  logparser.py  sqlite-prof.py
etc/systemd/user/: evr-attr-index.service  evr-fs.service  evr-glacier-storage.service
everarch-glacier-storage/: .gitignore  CMakeLists.txt  backlog  test.sh
everarch-glacier-storage/etc/configuration/: full.json
everarch-glacier-storage/src/: assert.c  assert.h  concurrent-glacier-test.c  concurrent-glacier.c  concurrent-glacier.h  configuration-test.c  configuration-testutil.c  configuration-testutil.h  configuration.c  configuration.h  dynamic_array-test.c  dynamic_array.c  dynamic_array.h  errors.h  evr-glacier-storage.c  files-test.c  files.c  files.h  glacier-cmd.c  glacier-cmd.h  glacier-test.c  glacier.c  glacier.h  keys.c  keys.h  logger.c  logger.h  memory.h  queue-test.c  queue.c  queue.h  test.h
evr-web/: .gitignore  .npmignore  Makefile  README  package-lock.json  package.json
evr-web/etc/: nginx.conf
evr-web/src/: base.css  evr-attr-index.js  index.css  index.html  mvc.js  nav.html  nav.js  routers.js  webpack.config.common.js
evr-web/src/attr-index-explorer/: index.css  index.html  index.js  seed-details.js  webpack.config.js
evr-web/src/join/: index.css  index.html  index.js  webpack.config.js
evr-web/src/upload/: index.css  index.html  index.js  webpack.config.js
python/: .gitignore  Makefile.am  evr-test  evr.py  setup.py
python/evr/: __init__.py  claims.py  cli.py
python/test/: file-claim.xml
src/: .gitignore  Makefile.am  assert.c  assert.h  attr-index-db-configuration.c  attr-index-db-configuration.h  attr-index-db-test.c  attr-index-db.c  attr-index-db.h  attr-query-lexer.l  attr-query-parser.y  attr-query-sql.c  attr-query-sql.h  attr-query-test.c  attr-ui-spec-interface.xslt  auth-test.c  auth.c  auth.h  basics-test.c  basics.c  basics.h  claims-test.c  claims.c  claims.h  concurrent-glacier-test.c  concurrent-glacier.c  concurrent-glacier.h  configp-test.c  configp.c  configp.h  configuration-test.c  configuration-testutil.c  configuration-testutil.h  configuration.c  configuration.h  configurations.c  configurations.h  daemon.c  daemon.h  db.c  (+85 more)
testing/: Makefile.am  fill-glacier
testing/data/configs/: a.conf  b.conf
testing/suite/: .gitignore  Makefile.am  config  config.alpine  config.in  run-test
testing/suite/attr-index/: .gitignore  attr-claim-1.xml  attr-claim-2.xml  attr-claim-future.xml  attr-claim.xml  attr-index.conf  attr-index.json  basic.xslt  berlin-claim.xml  broken-claim.xml  glacier-storage.conf  glacier-storage.json  no-created-claim-set.xml  no-seed-claim-set.xml  run-suite
testing/suite/attr-index-archive/: basic.xslt  run-suite
testing/suite/attr-index-watching-end/: basic.xslt  run-suite
testing/suite/evr-backup/: run-suite
testing/suite/fs/: basic.xslt  fs.xslt  run-suite
testing/suite/prohibited-cert/: .gitignore  run-suite
testing/suite/put-file/: .gitignore  run-suite
testing/suite/put-get-once/: .gitignore  evr-py-test.py  glacier-storage.json  run-suite
testing/suite/put-parallel/: put-loop  run-suite
testing/suite/sync/: run-suite
testing/tls/: attr-index-cert.pem  attr-index-key.pem  glacier-cert.pem  glacier-key.pem  tls.txt
websocket-client/: package-lock.json  package.json
websocket-client/lib/: index.js
websocket-server/: README  package-lock.json  package.json
websocket-server/lib/: child_process.js  config.js  fifo.js  fs.js  index.js  server.js
